backpack small fix

--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -1704,7 +1704,7 @@ article.post small {
   }
   @media screen and (min-width: 1080px) {
     .backpack-item{
-      width: 10vw;
+      width: 135px;
     }
   }
 .backpack-item img{
