--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -261,7 +261,7 @@ button.primary {
     #leerkansen .card-item.leerkans:hover {
       box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
     #leerkansen .card-item.leerkans:hover img.photo{
-      transform: scale(1.25);
+      transform: scale(1.20);
       transition: transform .2s; }
     #leerkansen .card-item.leerkans:hover img.badge{
       animation: bounce 1s; }
@@ -922,6 +922,9 @@ footer {
 .list:hover {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 5px 8px rgba(0, 0, 0, 0.22);
   cursor: pointer;
+}
+.list:hover img.pin{
+  animation: bounce 1s;
 }
 .list__opportunity_title {
   display: flex;
@@ -1667,6 +1670,10 @@ article.post small {
 .news-item:hover {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25), 0 5px 8px rgba(0, 0, 0, 0.22);
   cursor: pointer;
+}
+.news-item:hover img.news-img{
+  transform: scale(1.20);
+  transition: transform .2s;
 }
 .news-items-content {
   background-color: rgb(248, 248, 248);
