--- a/web-app/app/src/index.css
+++ b/web-app/app/src/index.css
@@ -446,7 +446,7 @@ nav {
     width: 270px;
     padding-left: 30px; }
     nav .logo img#gs-logo {
-      height: 20px;
+      height: 30px;
       padding: 35px 0; }
   nav .nav {
     width: 100%; }
@@ -487,7 +487,7 @@ nav {
       }
       @media screen and (min-width: 320px) {
         nav .logo img#gs-logo {
-          height: 30px;
+          height: 45px;
           padding: 35px 0; }
         nav .nav ul#gs-nav {
           flex-direction: column; } }
@@ -496,7 +496,7 @@ nav {
           display: none; 
         }
         nav .logo img#gs-logo {
-          height: 40px;
+          /* height: 45px; */
           padding: 35px 0; }
         nav .nav ul#gs-nav {
           margin-top: 15px;
